# join-scratch

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.opencode/command/: airborne-pcluster.md  airborne-sandbox.md
_aws-sandbox/: .gitignore  main.tf  outputs.tf  variables.tf
docs/: VIIRS.md
openspec/changes/archive/2026-04-16-add-icesat2-atl06-gridding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-refactor-data-type-grid-api/: tasks.md
openspec/changes/archive/2026-04-20-refactor-data-type-grid-api/specs/amsr2-dataset/: spec.md
openspec/changes/archive/2026-04-20-refactor-data-type-grid-api/specs/ceda-dataset/: spec.md
openspec/changes/archive/2026-04-20-refactor-data-type-grid-api/specs/regrid-dispatch/: spec.md
openspec/changes/archive/2026-04-20-refactor-data-type-grid-api/specs/viirs-dataset/: spec.md
openspec/changes/refactor-data-type-grid-api/: design.md  proposal.md  tasks.md
openspec/changes/refactor-data-type-grid-api/specs/data-types/: spec.md
openspec/changes/refactor-data-type-grid-api/specs/icesat2-dataset/: spec.md
openspec/changes/refactor-data-type-grid-api/specs/lis-grid/: spec.md
openspec/changes/refactor-data-type-grid-api/specs/shared-utils/: spec.md
openspec/changes/refactor-data-type-grid-api/specs/swe-workflow/: spec.md
openspec/specs/icesat2-atl06-gridding/: spec.md
scripts/: download_test_data.sh
src/join_scratch/: amsr2_regrid.py  amsr2_regrid_benchmark.py  amsr2_visualize.py  storage.py  swe_naive.py
src/join_scratch/amsr2/: amsr2_regrid.py  amsr2_regrid_benchmark.py  amsr2_visualize.py
src/join_scratch/ceda/: ceda_regrid.py  ceda_regrid_benchmark.py  ceda_visualize.py
src/join_scratch/datasets/: __init__.py  amsr2.py  base.py  ceda.py  icesat2.py
src/join_scratch/datasets/viirs/: __init__.py  handler.py
src/join_scratch/icesat2/: __init__.py  atl06_regrid.py  atl06_visualize.py
src/join_scratch/regrid/: __init__.py  _resample_helpers.py  regular_to_regular.py  sparse_to_regular.py  swath_to_regular.py
src/join_scratch/utils/: __init__.py  benchmark.py
src/join_scratch/viirs/: viirs_regrid.py  viirs_regrid_benchmark.py  viirs_visualize.py
workflows/swe/: __init__.py  amsr2_benchmark.py  amsr2_regrid.py  ceda_benchmark.py  ceda_regrid.py  fetch_atl06.py  full-workflow.py  icesat2_benchmark.py  icesat2_regrid.py  icesat2_visualize.py  lis_grid.py  s3_utils.py  viirs_benchmark.py  viirs_regrid.py  viirs_visualize.py  visualize_amsr2.py  visualize_ceda.py  visualize_combined.py  visualize_utils.py  zoom_polygons.geojson
