[project]
authors = [{name = "Alexey Shiklomanov", email = "alexey.shiklomanov@gmail.com"}]
dependencies = []
name = "join-scratch"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
join_scratch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.4,<3.15"
geopandas = ">=1.1.3,<2"
obstore = ">=0.9.2,<0.10"
xarray = ">=2026.2.0,<2027"
matplotlib = ">=3.10.8,<4"
h5netcdf = ">=1.8.1,<2"
earthaccess = ">=0.17.0,<0.18"
xesmf = ">=0.9.2,<0.10"
pyresample = ">=1.35.0,<2"
dask = ">=2026.3.0,<2027"
zarr = ">=3.1.6,<4"
satpy = ">=0.60.0,<0.61"

[tool.pixi.feature.dev.dependencies]
ipython = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default"}
dev = { features = ["dev"], solve-group = "default"}
