[project]
authors = [{name = "Alexey Shiklomanov", email = "alexey.shiklomanov@gmail.com"}]
dependencies = []
name = "join-scratch"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pyright]
venvPath = ".pixi/envs"
venv = "default"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
join_scratch = { path = ".", editable = true }

[tool.pixi.tasks]
bench_amsr2 = "python3 src/join_scratch/amsr2/amsr2_regrid_benchmark.py"
bench_viirs = "python3 src/join_scratch/viirs/viirs_regrid_benchmark.py"
bench_ceda = "python3 src/join_scratch/ceda/ceda_regrid_benchmark.py"
icesat2 = "python3 -m join_scratch.icesat2.atl06_regrid"
viz_icesat2 = "python3 -m join_scratch.icesat2.atl06_visualize"

[tool.pixi.dependencies]
python = ">=3.14.4,<3.15"
geopandas = ">=1.1.3,<2"
obstore = ">=0.9.2,<0.10"
xarray = ">=2026.2.0,<2027"
matplotlib = ">=3.10.8,<4"
h5netcdf = ">=1.8.1,<2"
earthaccess = ">=0.17.0,<0.18"
xesmf = ">=0.9.2,<0.10"
pyresample = ">=1.35.0,<2"
dask = ">=2026.3.0,<2027"
zarr = ">=3.1.6,<4"
satpy = ">=0.60.0,<0.61"
sliderule = ">=5.3.1,<6"
cartopy = ">=0.25.0,<0.26"

[tool.pixi.feature.dev.dependencies]
ipython = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default"}
dev = { features = ["dev"], solve-group = "default"}
