[project]
authors = [{name = "Alexey Shiklomanov", email = "alexey.shiklomanov@gmail.com"}]
dependencies = [
    "cartopy>=0.25.0",
]
name = "join-scratch"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pyright]
venvPath = ".pixi/envs"
venv = "default"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
join_scratch = { path = ".", editable = true }

[tool.pixi.tasks]
get_is2 = """
python3 workflows/swe/fetch_atl06.py
"""

swe = """
python3 workflows/swe/full-workflow.py \
          --lis-path s3://airborne-smce-prod-user-bucket/JOIN/lis_input_NMP_1000m_missouri.nc \
          --amsr2-dir s3://airborne-smce-prod-user-bucket/JOIN/AMSR2/ \
          --ceda-dir s3://airborne-smce-prod-user-bucket/JOIN/CEDA/ \
          --viirs-dir s3://airborne-smce-prod-user-bucket/JOIN/VIIRS/ \
          --icesat2-parquet s3://airborne-smce-prod-user-bucket/JOIN/results/swe/atl06.parquet \
          --output-path s3://airborne-smce-prod-user-bucket/JOIN/results/swe/swe_combined.nc \
          --max-viirs-tiles 30
"""

swe_visualize = """
python3 workflows/swe/visualize_combined.py \
          --lis-path s3://airborne-smce-prod-user-bucket/JOIN/lis_input_NMP_1000m_missouri.nc \
          --regridded-path s3://airborne-smce-prod-user-bucket/JOIN/results/swe/swe_combined.nc \
          --amsr2-dir s3://airborne-smce-prod-user-bucket/JOIN/AMSR2/ \
          --ceda-dir s3://airborne-smce-prod-user-bucket/JOIN/CEDA/ \
          --viirs-dir s3://airborne-smce-prod-user-bucket/JOIN/VIIRS/ \
          --icesat2-parquet s3://airborne-smce-prod-user-bucket/JOIN/results/swe/atl06.parquet \
          --polygons-path workflows/swe/zoom_polygons.geojson \
          --output-dir s3://airborne-smce-prod-user-bucket/JOIN/results/figures/swe
"""


[tool.pixi.dependencies]
python = ">=3.14.4,<3.15"
geopandas = ">=1.1.3,<2"
obstore = ">=0.9.2,<0.10"
xarray = ">=2026.2.0,<2027"
matplotlib = ">=3.10.8,<4"
h5netcdf = ">=1.8.1,<2"
earthaccess = ">=0.17.0,<0.18"
xesmf = ">=0.9.2,<0.10"
pyresample = ">=1.35.0,<2"
dask = ">=2026.3.0,<2027"
zarr = ">=3.1.6,<4"
satpy = ">=0.60.0,<0.61"
sliderule = ">=5.3.1,<6"
cartopy = ">=0.25.0,<0.26"

[tool.pixi.feature.dev.dependencies]
ipython = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default"}
dev = { features = ["dev"], solve-group = "default"}
